--- a/Practica5/Base.lproj/Main.storyboard
+++ b/Practica5/Base.lproj/Main.storyboard
@@ -53,5 +53,23 @@
             </objects>
             <point key="canvasLocation" x="92" y="152.47376311844079"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="dGT-Jx-NZr">
+            <objects>
+                <viewController id="Z0y-nX-wmd" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3BS-67-lZD"/>
+                        <viewControllerLayoutGuide type="bottom" id="Syu-sU-enj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Emk-b8-X40">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wDb-KM-apf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="853" y="152"/>
+        </scene>
     </scenes>
 </document>
